[tool.poetry]
name = "AzureTTS"
version = "0.1.0"
description = "Microsoft Azure Text To Speach for zerodayTTS Extension"
authors = ["zeroday0619 <zeroday0619_dev@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
